--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7029,6 +7029,33 @@ repositories:
       url: https://github.com/pr2/pr2_mechanism_msgs.git
       version: master
     status: unmaintained
+  pr2_navigation:
+    doc:
+      type: git
+      url: https://github.com/pr2/pr2_navigation.git
+      version: hydro-devel
+    release:
+      packages:
+      - laser_tilt_controller_filter
+      - pr2_move_base
+      - pr2_navigation
+      - pr2_navigation_config
+      - pr2_navigation_global
+      - pr2_navigation_local
+      - pr2_navigation_perception
+      - pr2_navigation_self_filter
+      - pr2_navigation_slam
+      - pr2_navigation_teleop
+      - semantic_point_annotator
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/pr2-gbp/pr2_navigation-release.git
+      version: 0.1.27-0
+    source:
+      type: git
+      url: https://github.com/pr2/pr2_navigation.git
+      version: hydro-devel
+    status: unmaintained
   pr2_power_drivers:
     doc:
       type: git
