--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -4515,6 +4515,24 @@ repositories:
       url: https://github.com/heron/heron.git
       version: indigo-devel
     status: developed
+  heron-desktop:
+    doc:
+      type: git
+      url: https://github.com/heron/heron_desktop.git
+      version: indigo-devel
+    release:
+      packages:
+      - heron_desktop
+      - heron_viz
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/clearpath-gbp/heron_desktop-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/heron/heron_desktop.git
+      version: indigo-devel
+    status: maintained
   hironx_rpc:
     doc:
       type: git
