--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -16541,6 +16541,24 @@ repositories:
       url: https://github.com/warthog-cpr/warthog.git
       version: indigo-devel
     status: developed
+  warthog-simulator:
+    doc:
+      type: git
+      url: https://github.com/warthog-cpr/warthog_simulator.git
+      version: indigo-devel
+    release:
+      packages:
+      - warthog_gazebo
+      - warthog_simulator
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/clearpath-gbp/warthog_simulator-release.git
+      version: 0.0.1-0
+    source:
+      type: git
+      url: https://github.com/warthog-cpr/warthog_simulator.git
+      version: indigo-devel
+    status: maintained
   warthog_desktop:
     doc:
       type: git
