heron-desktop: 0.0.2-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3204,6 +3204,22 @@ repositories:
     source:
       type: git
       url: https://github.com/heron/heron.git
+  heron-desktop:
+    doc:
+      type: git
+      url: https://github.com/heron/heron_desktop.git
+      version: kinetic-devel
+    release:
+      packages:
+      - heron_desktop
+      - heron_viz
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/clearpath-gbp/heron_desktop-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/heron/heron_desktop.git
       version: kinetic-devel
     status: maintained
   hls-lfcd-lds-driver:
