--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -1090,6 +1090,16 @@ repositories:
       url: https://github.com/ros-controls/ros_control.git
       version: melodic-devel
     status: maintained
+  ros_controllers:
+    doc:
+      type: git
+      url: https://github.com/ros-controls/ros_controllers.git
+      version: kinetic-devel
+    source:
+      type: git
+      url: https://github.com/ros-controls/ros_controllers.git
+      version: kinetic-devel
+    status: maintained
   ros_emacs_utils:
     doc:
       type: git
