--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -9113,6 +9113,11 @@ repositories:
       type: git
       url: https://github.com/xqms/rosmon.git
       version: master
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/xqms/rosmon-release.git
+      version: 1.0.0-0
     source:
       type: git
       url: https://github.com/xqms/rosmon.git
