--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -11242,6 +11242,26 @@ repositories:
       url: https://github.com/GT-RAIL/robot_pose_publisher.git
       version: develop
     status: maintained
+  robot_process:
+    doc:
+      type: git
+      url: https://github.com/snt-robotics/robot_process.git
+      version: master
+    release:
+      packages:
+      - robot_process
+      - robot_process_msgs
+      - robot_process_tutorials
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/snt-robotics/robot_process.git
+      version: 0.1.0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/snt-robotics/robot_process.git
+      version: master
+    status: developed
   robot_self_filter:
     release:
       tags:
