flask_cors: 3.0.3-2 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2425,6 +2425,13 @@ repositories:
       url: https://github.com/introlab/find-object.git
       version: kinetic-devel
     status: maintained
+  flask_cors:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/pyros-dev/flask-cors-rosrelease.git
+      version: 3.0.3-2
+    status: maintained
   follow_waypoints:
     doc:
       type: git
