rosmon: 1.0.0-0 in 'melodic/distribution.yaml' [bloom]

--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -1237,6 +1237,11 @@ repositories:
       type: git
       url: https://github.com/xqms/rosmon.git
       version: master
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/xqms/rosmon-release.git
+      version: 1.0.0-0
     source:
       test_pull_requests: true
       type: git
