--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3211,7 +3211,7 @@ repositories:
     source:
       type: git
       url: https://github.com/heron/heron.git
-  heron-desktop:
+  heron_desktop:
     doc:
       type: git
       url: https://github.com/heron/heron_desktop.git
@@ -3223,7 +3223,7 @@ repositories:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/clearpath-gbp/heron_desktop-release.git
-      version: 0.0.2-0
+      version: 0.0.2-1
     source:
       type: git
       url: https://github.com/heron/heron_desktop.git
