--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -11242,6 +11242,17 @@ repositories:
       url: https://github.com/GT-RAIL/robot_pose_publisher.git
       version: develop
     status: maintained
+  robot_process:
+    doc:
+      type: git
+      url: https://github.com/snt-robotics/robot_process.git
+      version: master
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/snt-robotics/robot_process.git
+      version: master
+    status: developed
   robot_self_filter:
     release:
       tags:
