--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2432,6 +2432,13 @@ repositories:
       url: https://github.com/pyros-dev/flask-cors-rosrelease.git
       version: 3.0.3-2
     status: maintained
+  flask_reverse_proxy:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/pyros-dev/flask-reverse-proxy-rosrelease.git
+      version: 0.2.0-0
+    status: maintained
   follow_waypoints:
     doc:
       type: git
