--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7012,11 +7012,13 @@ repositories:
       version: kinetic-devel
     release:
       packages:
+      - ethercat_hardware
       - fingertip_pressure
+      - pr2_ethercat_drivers
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/PR2-prime/pr2_ethercat_drivers-release.git
-      version: 1.8.18-0
+      version: 1.8.18-1
     source:
       type: git
       url: https://github.com/PR2-prime/pr2_ethercat_drivers.git
