urg_c: 1.0.404-0 in 'lunar/distribution.yaml' [bloom]

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -4296,6 +4296,21 @@ repositories:
       url: https://github.com/ros/urdf_parser_py.git
       version: indigo-devel
     status: maintained
+  urg_c:
+    doc:
+      type: git
+      url: https://github.com/ros-drivers/urg_c.git
+      version: master
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/urg_c-release.git
+      version: 1.0.404-0
+    source:
+      type: git
+      url: https://github.com/ros-drivers/urg_c.git
+      version: master
+    status: maintained
   usb_cam:
     doc:
       type: git
