Add libqt5-serialport to rosdep

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -2763,6 +2763,13 @@ libqt5-printsupport:
   freebsd: [qt5-printsupport]
   gentoo: ['dev-qt/qtprintsupport:5']
   ubuntu: [libqt5printsupport5]
+libqt5-serialport:
+  arch:   [qt5-serialport]
+  debian: [libqt5serialport5]
+  fedora: [qt5-qtserialport]
+  freebsd: [qt5-serialport]
+  gentoo: ['dev-qt/qtserialport:5']
+  ubuntu: [libqt5serialport5]
 libqt5-sql:
   arch:   [qt5-base]
   debian:
