python-aniso8601: 0.8.3-5 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -10147,6 +10147,13 @@ repositories:
       url: https://github.com/andreasBihlmaier/pysdf.git
       version: master
     status: developed
+  python-aniso8601:
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/pyros-dev/aniso8601-rosrelease.git
+      version: 0.8.3-5
+    status: maintained
   python-ftputil:
     release:
       tags:
