--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -269,6 +269,7 @@ python-aniso8601:
   centos: [python-aniso8601]
   debian: [python-aniso8601]
   fedora: [python2-aniso8601]
+  gentoo: [dev-python/aniso8601]
   ubuntu: [python-aniso8601]
 python-annoy-pip:
   debian:
