--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7278,6 +7278,13 @@ repositories:
       url: https://github.com/asmodehn/ftputil-rosrelease.git
       version: 3.3.0-3
     status: developed
+  python-webargs:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/pyros-dev/webargs-rosrelease.git
+      version: 1.3.4-1
+    status: maintained
   python_qt_binding:
     doc:
       type: git
