--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -3469,6 +3469,13 @@ repositories:
       url: https://github.com/asmodehn/flask-cors-rosrelease.git
       version: 3.0.2-2
     status: developed
+  flask_restful:
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/asmodehn/flask-restful-rosrelease.git
+      version: 0.3.4-3
+    status: maintained
   flask_reverse_proxy:
     release:
       tags:
@@ -10139,13 +10146,6 @@ repositories:
         release: release/indigo/{package}/{version}
       url: https://github.com/pyros-dev/aniso8601-rosrelease.git
       version: 0.8.3-5
-    status: maintained
-  python-flask-restful:
-    release:
-      tags:
-        release: release/indigo/{package}/{version}
-      url: https://github.com/pyros-dev/flask-restful-rosrelease.git
-      version: 0.3.4-4
     status: maintained
   python-ftputil:
     release:
