--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -12201,6 +12201,13 @@ repositories:
       url: https://github.com/RobotWebTools/web_video_server.git
       version: master
     status: maintained
+  webargs:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/asmodehn/webargs-rosrelease.git
+      version: 1.3.4-2
+    status: maintained
   webkit_dependency:
     doc:
       type: git
