test pull requests (missed the bloom prompt)

--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -566,6 +566,7 @@ repositories:
       url: https://github.com/ros-gbp/interactive_markers-release.git
       version: 1.11.4-0
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/ros-visualization/interactive_markers.git
       version: indigo-devel
