--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6538,7 +6538,7 @@ repositories:
       test_commits: false
       type: git
       url: https://github.com/NewEagleRaptor/pacifica-dbw-ros.git
-      version: default
+      version: master
     status: developed
   packml:
     doc:
