--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6544,6 +6544,17 @@ repositories:
       url: https://github.com/allenh1/p2os.git
       version: master
     status: maintained
+  pacifica_dbw_ros:
+    doc:
+      type: git
+      url: https://github.com/NewEagleRaptor/pacifica-dbw-ros.git
+      version: master
+    source:
+      test_commits: false
+      type: git
+      url: https://github.com/NewEagleRaptor/pacifica-dbw-ros.git
+      version: master
+    status: developed
   packml:
     doc:
       type: git
