--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6787,6 +6787,7 @@ repositories:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/ACSLaboratory/pheeno_ros_sim-release.git
+      version: 0.1.5-0
     source:
       type: git
       url: https://github.com/ACSLaboratory/pheeno_ros_sim.git
