yp-spur: 1.15.2-0 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -17043,6 +17043,23 @@ repositories:
         release: release/indigo/{package}/{version}
       url: https://github.com/youbot-release/youbot_simulation-release.git
       version: 0.8.0-0
+  yp-spur:
+    doc:
+      type: git
+      url: https://github.com/openspur/yp-spur.git
+      version: master
+    release:
+      packages:
+      - ypspur
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/openspur/yp-spur-release.git
+      version: 1.15.2-0
+    source:
+      type: git
+      url: https://github.com/openspur/yp-spur.git
+      version: master
+    status: developed
   yujin_maps:
     doc:
       type: git
