--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -4596,6 +4596,23 @@ repositories:
       url: https://github.com/rohbotics/xv_11_laser_driver.git
       version: kinetic-devel
     status: maintained
+  yp-spur:
+    doc:
+      type: git
+      url: https://github.com/openspur/yp-spur.git
+      version: master
+    release:
+      packages:
+      - ypspur
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/openspur/yp-spur-release.git
+      version: 1.15.2-0
+    source:
+      type: git
+      url: https://github.com/openspur/yp-spur.git
+      version: master
+    status: developed
   zbar_ros:
     doc:
       type: git
