Add in a key for collada-dom on jessie.
We need this to do releases of https://github.com/ros/collada_urdf
on Kinetic.

Signed-off-by: Chris Lalancette <clalancette@openrobotics.org>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -437,6 +437,7 @@ collada-dom:
   arch: [collada-dom]
   debian:
     buster: [libcollada-dom2.4-dp-dev]
+    jessie: [libcollada-dom2.4-dp-dev]
     stretch: [libcollada-dom2.4-dp-dev]
   fedora: [collada-dom-devel]
   gentoo: [dev-libs/collada-dom]
