--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -12301,6 +12301,25 @@ repositories:
       url: https://github.com/asmodehn/webtest-rosrelease.git
       version: 2.0.18-1
     status: maintained
+  wge100_driver:
+    doc:
+      type: git
+      url: https://github.com/ros-drivers/wge100_driver.git
+      version: kinetic-devel
+    release:
+      packages:
+      - wge100_camera
+      - wge100_camera_firmware
+      - wge100_driver
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ros-drivers-gbp/wge100_driver-release.git
+      version: 1.8.2-0
+    source:
+      type: git
+      url: https://github.com/ros-drivers/wge100_driver.git
+      version: kinetic-devel
+    status: maintained
   wifi_ddwrt:
     doc:
       type: git
