robot_activity: 0.1.1-0 in 'lunar/distribution.yaml' [bloom]

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -2750,6 +2750,15 @@ repositories:
       type: git
       url: https://github.com/snt-robotics/robot_activity.git
       version: master
+    release:
+      packages:
+      - robot_activity
+      - robot_activity_msgs
+      - robot_activity_tutorials
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/snt-robotics/robot_activity-release.git
+      version: 0.1.1-0
     source:
       test_pull_requests: true
       type: git
