humanoid_navigation: 0.4.2-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3403,6 +3403,27 @@ repositories:
       url: https://github.com/ahornung/humanoid_msgs.git
       version: devel
     status: maintained
+  humanoid_navigation:
+    doc:
+      type: git
+      url: https://github.com/ROBOTIS-GIT/humanoid_navigation.git
+      version: kinetic-devel
+    release:
+      packages:
+      - footstep_planner
+      - gridmap_2d
+      - humanoid_localization
+      - humanoid_navigation
+      - humanoid_planner_2d
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ROBOTIS-GIT-release/humanoid_navigation-release.git
+      version: 0.4.2-0
+    source:
+      type: git
+      url: https://github.com/ROBOTIS-GIT/humanoid_navigation.git
+      version: kinetic-devel
+    status: maintained
   husky:
     doc:
       type: git
