--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -8291,6 +8291,30 @@ repositories:
       url: https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-msgs.git
       version: kinetic-devel
     status: developed
+  robotis_op3_tools:
+    doc:
+      type: git
+      url: https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Tools.git
+      version: kinetic-devel
+    release:
+      packages:
+      - op3_action_editor
+      - op3_camera_setting_tool
+      - op3_gui_demo
+      - op3_navigation
+      - op3_offset_tuner_client
+      - op3_offset_tuner_server
+      - op3_web_setting_tool
+      - robotis_op3_tools
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ROBOTIS-GIT-release/robotis_op3_tools-release.git
+      version: 0.2.1-0
+    source:
+      type: git
+      url: https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Tools.git
+      version: kinetic-devel
+    status: developed
   robotis_utility:
     doc:
       type: git
