--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7336,7 +7336,12 @@ repositories:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/asmodehn/pyros-rosinterface-rosrelease.git
-      version: 0.4.0-0
+      version: 0.4.1-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/pyros-dev/pyros-rosinterface.git
+      version: master
     status: developed
   pyros_test:
     doc:
