robotis_op3_demo: 0.1.0-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -8270,6 +8270,26 @@ repositories:
       url: https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Common.git
       version: kinetic-devel
     status: developed
+  robotis_op3_demo:
+    doc:
+      type: git
+      url: https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Demo.git
+      version: kinetic-devel
+    release:
+      packages:
+      - op3_ball_detector
+      - op3_bringup
+      - op3_demo
+      - robotis_op3_demo
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ROBOTIS-GIT-release/robotis_op3_demo-release.git
+      version: 0.1.0-0
+    source:
+      type: git
+      url: https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Demo.git
+      version: kinetic-devel
+    status: developed
   robotis_op3_msgs:
     doc:
       type: git
