thormang3_opc: 0.3.0-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -11183,10 +11183,17 @@ repositories:
       url: https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-OPC.git
       version: kinetic-devel
     release:
+      packages:
+      - thormang3_action_script_player
+      - thormang3_demo
+      - thormang3_foot_step_generator
+      - thormang3_navigation
+      - thormang3_offset_tuner_client
+      - thormang3_opc
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/ROBOTIS-GIT-release/ROBOTIS-THORMANG-OPC-release.git
-      version: 0.2.0-1
+      version: 0.3.0-0
     source:
       type: git
       url: https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-OPC.git
